hopefully fixed bamboo surefire issue