@@ -72,8 +72,7 @@
 			    <version>2.17</version>
 			    <configuration>
 	    	        <forkCount>1</forkCount>
-        			<reuseForks>true</reuseForks>
-			        <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+        			<reuseForks>false</reuseForks>
 			    </configuration>
 			</plugin>
 			
